# Chat_bot_with_Yandex_Ai

./: ApiClient.cpp  ApiClient.h  CMakeLists.txt  ConversationPage.qml  Main.qml  SecondPage.qml  main.cpp
